Этот вариант исправно работает в отдельном проекте, но в составе traffic_simulator все та же ошибка TOO_MANY_REDIRECTS.